2012-06-28  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_serial.cc: Fix includes for IOCTL codes to support Mingw64.
	* fhandler_tape.cc: Ditto.
	* flock.cc (allow_others_to_sync): Use PISECURITY_DESCRIPTOR since
	PSECURITY_DESCRIPTOR is supposed to be the opaque type.
	* ntdll.h: Remove CreateDisposition flags again, now that they are
	defined in Mingw64's ntdef.h.  Ditto for Create/Open flags.

2012-06-28  Corinna Vinschen  <corinna@vinschen.de>

	* exceptions.cc (RtlUnwind): Align declaration with MSDN.
	* ntdll.h: Define CreateDisposition Flags.  Add comments.
	* winlean.h: Define FILE_SHARE_VALID_FLAGS if using Mingw64 headers.

2012-06-27  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* cygwait.h (cancelable_wait): Make extern to avoid always including.
	* select.cc (allocfd_set): Try to make a little more efficient.
	(cygwin_select): Break into two functions to avoid what seems to be a
	strange compiler problem with alloca and sel constructor.
	(select): New function.  Always honor return from call_signal_handler.
	(select_stuff::wait): Always honor return from call_signal_handler.
	* select.h (select_stuff::select_stuff): Use NULL to initialize
	pointers rather than 0.

2012-06-27  Corinna Vinschen  <corinna@vinschen.de>

	* exceptions.cc (exception::handle): Cast exception code to NTSTATUS
	for comparison.
	* ntdll.h: Drop defining NT status codes in favor of including
	ntstatus.h.

2012-06-27  Corinna Vinschen  <corinna@vinschen.de>

	* miscfuncs.cc (WritePipeOverlapped): Define second parameter LPCVOID,
	rather than PCVOID.
	* miscfuncs.h (WritePipeOverlapped): Ditto.

2012-06-27  Corinna Vinschen  <corinna@vinschen.de>

	* advapi32.cc (_ADVAPI32_): Define.  Explain why.
	(ImpersonateNamedPipeClient): Add missing WINAPI.
	* ntdll.h (STATUS_INVALID_PARAMETER): Only define if it isn't already.
	(STATUS_DLL_NOT_FOUND): Ditto.
	(STATUS_ENTRYPOINT_NOT_FOUND): Ditto.
	(enum _EVENT_TYPE): Guard against redefinition since it's already