@@ -1,12 +1,16 @@
 /* kernel32.cc: Win32 replacement functions.
 
-   Copyright 2008, 2010, 2011 Red Hat, Inc.
+   Copyright 2008, 2010, 2011, 2012 Red Hat, Inc.
 
 This file is part of Cygwin.
 
 This software is a copyrighted work licensed under the terms of the
 Cygwin license.  Please consult the file "CYGWIN_LICENSE" for
 details. */
+
+/* This define is required to tell the mingw64 headers to omit
+   declspec(dllimport) from all kernel32 function declarations. */
+#define _KERNEL32_
 
 #include "winsup.h"
 #include "shared_info.h"
@@ -308,8 +312,8 @@ CreateFileMappingW (HANDLE hFile, LPSECURITY_ATTRIBUTES lpAttributes,
 			    | PAGE_WRITECOPY | PAGE_EXECUTE
 			    | PAGE_EXECUTE_READ | PAGE_EXECUTE_READWRITE
 			    | PAGE_EXECUTE_WRITECOPY);
-  ULONG attribs = flProtect & (SEC_BASED | SEC_NO_CHANGE | SEC_IMAGE | SEC_VLM
-			       | SEC_RESERVE | SEC_COMMIT | SEC_NOCACHE);
+  ULONG attribs = flProtect & (SEC_COMMIT | SEC_IMAGE | SEC_NOCACHE
+			       | SEC_RESERVE);
   LARGE_INTEGER size = {{ LowPart  : dwMaximumSizeLow,
 			  HighPart : dwMaximumSizeHigh }};
   PLARGE_INTEGER psize = size.QuadPart ? &size : NULL;
