@@ -1,5 +1,10 @@
 2012-06-28  Corinna Vinschen  <corinna@vinschen.de>
 
+	* kernel32.cc (_KERNEL32_): Define.  Explain why.
+	(CreateFileMappingW): Drop undocumented flProtect flags.
+
+2012-06-28  Corinna Vinschen  <corinna@vinschen.de>
+
 	* fhandler_serial.cc: Fix includes for IOCTL codes to support Mingw64.
 	* fhandler_tape.cc: Ditto.
 	* flock.cc (allow_others_to_sync): Use PISECURITY_DESCRIPTOR since
